--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
     "@types/pg": "^8.6.1",
+    "jest": "^27.2.5",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8"
   }
 }
