--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
     "@types/pg": "^8.6.1",
+    "@types/supertest": "^2.0.11",
     "jest": "^27.2.5",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
